--- a/8-express-avanzado/package.json
+++ b/8-express-avanzado/package.json
@@ -11,6 +11,11 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
+  "keywords": [
+    "node",
+    "api restful",
+    "express"
+  ],
   "scripts": {
     "start": "node server.js"
   }
